--- a/client/src/styles/components/Detail/_detail.scss
+++ b/client/src/styles/components/Detail/_detail.scss
@@ -86,12 +86,15 @@
         height: 95%;
         max-width: 75%;
         border-radius: $standard-border-radius;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         // background: #e0e0e0;
         // box-shadow: 14px 14px 17px #8b8b8b;
 
         img {
           width: 100%;
-          height: 100%;
+          max-height: 100%;
           border-radius: $standard-border-radius;
           transition: all 0.1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
         }
