--- a/client/src/styles/components/pagination/_pagination.scss
+++ b/client/src/styles/components/pagination/_pagination.scss
@@ -26,7 +26,7 @@ $pagination-btn-unset: url('../../../assets/images/buttons/paginationBtnUnset.pn
 
     &:hover {
       background-color: $standard-color-transparent;
-      scale: 1.1;
+      // scale: 1.1;
     }
   }
 
